--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-EMAIL_ORIGEN=e.redondo0314@gmail.com
-EMAIL_PASSWORD=hukjibwschvjjdda
+EMAIL_ORIGEN=horizonpqrsd@gmail.com
+EMAIL_PASSWORD=hrqvnftxpfktltoe
